--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="main.js"></script>
+    <script type="module" src="/Scripts/main.js"></script>
 </body>
 </html>
